--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Araound The Unite U.S.</title>
 </head>
 <body>
-    
+    <div class="page">
+        <header class="header">
+
+        </header>
+        <main class="content">
+
+        </main>
+        <footer class="footer">
+            
+        </footer>
+    </div>
 </body>
 
 </html>
