--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <header class="header">
-
+            <img class="logo" src="./imagenes/logo.svg" alt="Logo around the US">
         </header>
         <main class="content">
 
