--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,41 @@
     <link rel="stylesheet" href="./pages/index.css">
     <title>Araound The Unite U.S.</title>
 </head>
+
 <body>
     <div class="page">
         <header class="header">
             <img class="logo" src="./imagenes/logo.svg" alt="Logo around the US">
         </header>
         <main class="content">
+            <section class="profile">
+                <div class="profile__data">
+                    <div class="profile__avatar">
+                        <img class="profile__imagen" src="./imagenes/image.jpg" alt="Jacques Cousteau">
+                    </div>
+
+                    <div class="profile__info">
+                        <div class="profile__contenedor-titulo">
+                            <h1 class="profile__title">Jacques Cousteau</h1>
+                            <button type="button" class="edit-button">
+                                <img src="./imagenes/Edit Button.svg" alt="edit button">
+                            </button>
+                        </div>
+
+                        <p class="profile__subtitle">Explorador</p>
+
+                    </div>
+
+                </div>
+
+                <div class="profile__button">
+                    <img class="add-button" src="./imagenes/Add Button.svg" alt="icono boton agregar">
+                </div>
+            </section>
 
         </main>
         <footer class="footer">
-            
+
         </footer>
     </div>
 </body>
