--- a/index.html
+++ b/index.html
@@ -39,12 +39,95 @@
                     <img class="add-button" src="./imagenes/Add Button.svg" alt="icono boton agregar">
                 </div>
             </section>
+            <section>
+                <ul class="elements">
+                    <li class="card">
+                        <div class="card__contetendor">
+                            <img src="./imagenes/vayy de yosemite.jpg" alt="Valle de Yosemite">
+                            <div class="card__info">
+                                <p class="card__title">Valle de Yosemite</p>
+                                <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
+                                <img class="card__imagen-corazon me-gusta" src="./imagenes/me_gusta_negro.svg"
+                                    alt="icono corazon">
+                            </div>
+                        </div>
+                        <img class="card__trash" src="./imagenes/Trash.svg" alt="icon trash">
+                    </li>
+
+                    <li class=" card">
+                        <div class="card__contetendor">
+                            <img src="./imagenes/lago louise.png" alt="Lago Louise">
+                            <div class="card__info">
+                                <p class="card__title">Lago Louise</p>
+                                <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
+                                <img class="card__imagen-corazon me-gusta" src="./imagenes/me_gusta_negro.svg"
+                                    alt="icono corazon">
+                            </div>
+                        </div>
+                        <img class="card__trash" src="./imagenes/Trash.svg" alt="icon trash">
+                    </li>
+
+                    <li class="card">
+                        <div class="card__contetendor">
+                            <img src="./imagenes/calvas.png" alt="Montañas Calvas">
+                            <div class="card__info">
+                                <p class="card__title">Montañas Calvas</p>
+                                <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
+                                <img class="card__imagen-corazon me-gusta" src="./imagenes/me_gusta_negro.svg"
+                                    alt="icono corazon">
+                            </div>
+                        </div>
+                        <img class="card__trash" src="./imagenes/Trash.svg" alt="icon trash">
+                    </li>
+
+                    <li class="card">
+                        <div class="card__contetendor">
+                            <img src="./imagenes/moab.jpg" alt="">
+                            <div class="card__info">
+                                <p class="card__title">Valle de Yosemite</p>
+                                <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
+                                <img class="card__imagen-corazon me-gusta" src="./imagenes/me_gusta_negro.svg"
+                                    alt="icono corazon">
+                            </div>
+                        </div>
+                        <img class="card__trash" src="./imagenes/Trash.svg" alt="icon trash">
+                    </li>
+
+                    <li class="card">
+                        <div class="card__contetendor">
+                            <img src="./imagenes/moab-2.jpg" alt="">
+                            <div class="card__info">
+                                <p class="card__title">Valle de Yosemite</p>
+                                <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
+                                <img class="card__imagen-corazon me-gusta" src="./imagenes/me_gusta_negro.svg"
+                                    alt="icono corazon">
+                            </div>
+                        </div>
+                        <img class="card__trash" src="./imagenes/Trash.svg" alt="icon trash">
+                    </li>
+
+                    <li class="card">
+                        <div class="card__contetendor">
+                            <img src="./imagenes/moab-2.jpg" alt="">
+                            <div class="card__info">
+                                <p class="card__title">Valle de Yosemite</p>
+                                <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
+                                <img class="card__imagen-corazon me-gusta" src="./imagenes/me_gusta_negro.svg"
+                                    alt="icono corazon">
+                            </div>
+                        </div>
+                        <img class="card__trash" src="./imagenes/Trash.svg" alt="icon trash">
+                    </li>
+                </ul>
+
+            </section>
 
         </main>
         <footer class="footer">
 
         </footer>
     </div>
+    <script src="./js/js.js"></script>
 </body>
 
 </html>
