--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         </header>
         <main class="content">
             <section class="profile">
+                <section class="popup popup_perfil">
+                    <form class="popup__container">
+                        <img class="popup__button-cerrar-perfil" src="./imagenes/Close Icon.svg" alt="icon cerrar">
+                        <h2 class="popup__title">Editar Perfil</h2>
+                        <input class="popup__input" type="text" placeholder="Nombre">
+                        <input class="popup__input" type="text" placeholder="Acerca de mi">
+                        <input class="popup__submit" type="submit" value="Crear">
+                    </form>
+                    
+                </section>
                 <div class="profile__data">
                     <div class="profile__avatar">
                         <img class="profile__imagen" src="./imagenes/image.jpg" alt="Jacques Cousteau">
@@ -40,6 +50,16 @@
                 </div>
             </section>
             <section>
+                <section class="popup popup_places">
+                    <form class="popup__container">
+                        <img class="popup__button-cerrar-places" src="./imagenes/Close Icon.svg" alt="icon cerrar">
+                        <h2 class="popup__title">Nuevo lugar</h2>
+                        <input class="popup__input" type="text" placeholder="Titulo">
+                        <input class="popup__input" type="text" placeholder="Enlace a la Imagen">
+                        <input class="popup__submit" type="submit" value="Crear">
+                    </form>
+                    
+                </section>
                 <ul class="elements">
                     <li class="card">
                         <div class="card__contetendor">
@@ -119,9 +139,7 @@
                         <img class="card__trash" src="./imagenes/Trash.svg" alt="icon trash">
                     </li>
                 </ul>
-
             </section>
-
         </main>
         <footer class="footer">
 
