--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <main class="content">
             <section class="profile">
                 <section class="popup popup_perfil">
-                    <form class="popup__container">
+                    <form class="popup__container popup__formPerfil" name="form" id="form">
                         <img class="popup__button-cerrar-perfil" src="./imagenes/Close Icon.svg" alt="icon cerrar">
                         <h2 class="popup__title">Editar Perfil</h2>
-                        <input class="popup__input" type="text" placeholder="Nombre">
-                        <input class="popup__input" type="text" placeholder="Acerca de mi">
-                        <input class="popup__submit" type="submit" value="Crear">
+                        <input class="popup__input popup__input_nombre" type="text" placeholder="Nombre">
+                        <input class="popup__input popup__input_about-me" type="text" placeholder="Acerca de mi">
+                        <input class="popup__submit popup__submit_perfil" type="submit" value="Modificar">
                     </form>
                     
                 </section>
@@ -50,20 +50,21 @@
                 </div>
             </section>
             <section>
-                <section class="popup popup_places">
-                    <form class="popup__container">
+                <section class="popup popup_Element">
+                    <form class="popup__container popup__formElement">
                         <img class="popup__button-cerrar-places" src="./imagenes/Close Icon.svg" alt="icon cerrar">
                         <h2 class="popup__title">Nuevo lugar</h2>
                         <input class="popup__input" type="text" placeholder="Titulo">
                         <input class="popup__input" type="text" placeholder="Enlace a la Imagen">
-                        <input class="popup__submit" type="submit" value="Crear">
+                        <input class="popup__submit popup__submit_Element" type="submit" value="Crear">
                     </form>
-                    
                 </section>
                 <ul class="elements">
                     <li class="card">
-                        <div class="card__contetendor">
+                        <div class="card__image-container">
                             <img src="./imagenes/vayy de yosemite.jpg" alt="Valle de Yosemite">
+                        </div>
+                        <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Valle de Yosemite</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
@@ -75,8 +76,10 @@
                     </li>
 
                     <li class=" card">
-                        <div class="card__contetendor">
+                        <div class="card__image-container">
                             <img src="./imagenes/lago louise.png" alt="Lago Louise">
+                        </div>
+                        <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Lago Louise</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
@@ -88,8 +91,10 @@
                     </li>
 
                     <li class="card">
-                        <div class="card__contetendor">
+                        <div class="card__image-container">
                             <img src="./imagenes/calvas.png" alt="Montañas Calvas">
+                        </div>
+                        <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Montañas Calvas</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
@@ -101,8 +106,10 @@
                     </li>
 
                     <li class="card">
-                        <div class="card__contetendor">
+                        <div class="card__image-container">
                             <img src="./imagenes/moab.jpg" alt="">
+                        </div>
+                        <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Valle de Yosemite</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
@@ -114,8 +121,10 @@
                     </li>
 
                     <li class="card">
-                        <div class="card__contetendor">
+                        <div class="card__image-container">
                             <img src="./imagenes/moab-2.jpg" alt="">
+                        </div>
+                        <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Valle de Yosemite</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
@@ -127,8 +136,10 @@
                     </li>
 
                     <li class="card">
-                        <div class="card__contetendor">
+                        <div class="card__image-container">
                             <img src="./imagenes/moab-2.jpg" alt="">
+                        </div>
+                        <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Valle de Yosemite</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
