ajustes en clases

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
 
                 <section class="popup popup_perfil">
                     <form class="popup__container popup__formPerfil" name="form" id="form">
-                        <img class="btnCerrar popup__button-cerrar-perfil" src="./imagenes/Close Icon.svg"
+                        <img class="btnCerrar popup__button-cerrar-perfil" src="./imagenes/Close-Icon.svg"
                             alt="icon cerrar">
                         <h2 class="popup__title">Editar Perfil</h2>
                         <input class="popup__input popup__input_nombre" type="text" placeholder="Nombre">
@@ -37,7 +37,7 @@
                         <div class="profile__contenedor-titulo">
                             <h1 class="profile__title">Jacques Cousteau</h1>
                             <button type="button" class="edit-button">
-                                <img src="./imagenes/Edit Button.svg" alt="edit button">
+                                <img src="./imagenes/Edit-Button.svg" alt="edit button">
                             </button>
                         </div>
                         <p class="profile__subtitle">Explorador</p>
@@ -46,15 +46,16 @@
                 </div>
 
                 <div class="profile__button">
-                    <img class="add-button" src="./imagenes/Add Button.svg" alt="icono boton agregar">
+                    <img class="add-button" src="./imagenes/Add-Button.svg" alt="icono boton agregar">
                 </div>
 
             </section>
+
             <section>
 
                 <section class="popup popup_Element">
                     <form class="popup__container popup__formElement">
-                        <img class=" btnCerrar popup__button-cerrar-places" src="./imagenes/Close Icon.svg"
+                        <img class=" btnCerrar popup__button-cerrar-places" src="./imagenes/Close-Icon.svg"
                             alt="icon cerrar">
                         <h2 class="popup__title">Nuevo lugar</h2>
                         <input class="popup__input" type="text" placeholder="Titulo">
@@ -66,13 +67,13 @@
                 <ul class="elements">
                     <li class="card">
                         <div class="card__image-container">
-                            <img class="card__imagen" src="./imagenes/vayy de yosemite.jpg" alt="Valle de Yosemite">
+                            <img class="card__imagen" src="./imagenes/vayy-de-yosemite.jpg" alt="Valle de Yosemite">
                         </div>
                         <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Valle de Yosemite</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
-                                <img class="me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
+                                <img class="card__me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
                             </div>
                         </div>
                         <i class="fa-solid fa-trash card__trash"></i>
@@ -80,13 +81,13 @@
 
                     <li class=" card">
                         <div class="card__image-container">
-                            <img class="card__imagen" src="./imagenes/lago louise.png" alt="Lago Louise">
+                            <img class="card__imagen" src="./imagenes/lago-louise.png" alt="Lago Louise">
                         </div>
                         <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Lago Louise</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
-                                <img class="me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
+                                <img class="card__me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
                             </div>
                         </div>
                         <i class="fa-solid fa-trash card__trash"></i>
@@ -94,13 +95,13 @@
 
                     <li class="card">
                         <div class="card__image-container">
-                            <img  class="card__imagen"src="./imagenes/calvas.png" alt="Montañas Calvas">
+                            <img class="card__imagen" src="./imagenes/calvas.png" alt="Montañas Calvas">
                         </div>
                         <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Montañas Calvas</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
-                                <img class="me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
+                                <img class="card__me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
                             </div>
                         </div>
                         <i class="fa-solid fa-trash card__trash"></i>
@@ -108,13 +109,13 @@
 
                     <li class="card">
                         <div class="card__image-container">
-                            <img class="card__imagen" src="./imagenes/moab.jpg" alt="">
+                            <img class="card__imagen" src="./imagenes/moab.jpg" alt="Moab, Utah">
                         </div>
                         <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Moab, Utah</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
-                                <img class="me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
+                                <img class="card__me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
                             </div>
                         </div>
                         <i class="fa-solid fa-trash card__trash"></i>
@@ -122,13 +123,14 @@
 
                     <li class="card">
                         <div class="card__image-container">
-                            <img  class="card__imagen"src="./imagenes/karthik-sreenivas-aLMpxpG1wL0-unsplash.jpg" alt="Asheville, NC, USA">
+                            <img class="card__imagen" src="./imagenes/karthik-sreenivas-aLMpxpG1wL0-unsplash.jpg"
+                                alt="Asheville, NC, USA">
                         </div>
                         <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Asheville, NC, USA</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
-                                <img class="me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
+                                <img class="card__me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
                             </div>
                         </div>
                         <i class="fa-solid fa-trash card__trash"></i>
@@ -136,13 +138,14 @@
 
                     <li class="card">
                         <div class="card__image-container">
-                            <img  class="card__imagen"src="./imagenes/iris-papillon-FuxRM_jOFHY-unsplash.jpg" alt="">
+                            <img class="card__imagen" src="./imagenes/iris-papillon-FuxRM_jOFHY-unsplash.jpg"
+                                alt="Big Sur, United States">
                         </div>
                         <div class="card__contenido">
                             <div class="card__info">
                                 <p class="card__title">Big Sur, United States</p>
                                 <img class="card__imagen-corazon" src="./imagenes/me_gusta.svg" alt="icono corazon">
-                                <img class="me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
+                                <img class="card__me-gusta" src="./imagenes/me_gusta_negro.svg" alt="icono corazon">
                             </div>
                         </div>
                         <i class="fa-solid fa-trash card__trash"></i>
